--- a/sophia/templates/philosophy.html
+++ b/sophia/templates/philosophy.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Teaching Philosophy | 
+Teaching Philosophy | Sophia Hsiao Studio
 {% endblock %}
-
+{% block meta %}
+  <meta name="description" content="Sophia Hsiao's philosophy of teaching and how she conducts her violin lessons">
+{% endblock %}
 {% block content %}
 <!--=== Breadcrumbs v3 ===-->
 <div class="breadcrumbs-v3 img-v3 text-center">
@@ -34,7 +36,7 @@ Teaching Philosophy |
             <i class="fa fa-graduation-cap"></i>
             <div class="service-block-desc">
               <h3>Every student can learn</h3>
-              <p>When given sound instruction and a nurturing environment, any student can learn to play music. I have taught students ages 4 to 65 and have grown to love teaching and walking alongside my students on their musical journeys.</p>
+              <p>When given sound instruction and a nurturing environment, any student can learn to play the violin. I have taught students ages 4 to 65 and have grown to love teaching and walking alongside my students on their musical journeys.</p>
             </div>
           </div>
         </div>
@@ -66,7 +68,7 @@ Teaching Philosophy |
             <i class="fa fa-wrench"></i>
             <div class="service-block-desc">
               <h3>Equipping Students</h3>
-              <p>I believe in equipping each student with the necessary tools they need in order to grow as a musician and to learn the instrument better. I engage my students by asking questions and discussing what needs work to help the student take responsibility for their learning.</p>
+              <p>I believe in equipping each student with the necessary tools they need in order to grow as a musician and to learn the violin better. I engage my students by asking questions and discussing what needs work to help the student take responsibility for their learning.</p>
             </div>
           </div>
         </div>
@@ -80,7 +82,7 @@ Teaching Philosophy |
             <i class="fa fa-music"></i>
             <div class="service-block-desc">
               <h3>Traditional and Suzuki method</h3>
-              <p>My approach to musical instruction is a combination of the <a href="https://suzukiassociation.org/about/suzuki-method/">Suzuki</a> and traditional methods. I provide specific instruction on how to play the instrument with a better understanding of proper technique, music theory, and musical skill.</p>
+              <p>My approach to violin instruction is a combination of the <a href="https://suzukiassociation.org/about/suzuki-method/">Suzuki</a> and traditional methods. I provide specific instruction on how to play the violin with a better understanding of proper technique, music theory, and musical skill.</p>
             </div>
           </div>
         </div>
@@ -89,7 +91,7 @@ Teaching Philosophy |
             <i class="fa fa-line-chart"></i>
             <div class="service-block-desc">
               <h3>Practice</h3>
-              <p>Regular practice is crucial to any musical growth and in practicing, I hope each student will cultivate a lifelong love for music making and experience the reward of discipline and hard work. I teach my students how to practice and how to get the most out of it.</p>
+              <p>Regular practice is crucial to any musical growth with the violin and in practicing, I hope each student will cultivate a lifelong love for music making and experience the reward of discipline and hard work. I teach my students how to practice and how to get the most out of it.</p>
             </div>
           </div>
         </div>
@@ -103,7 +105,7 @@ Teaching Philosophy |
             <i class="fa fa-trophy"></i>
             <div class="service-block-desc">
               <h3>Performance</h3>
-              <p>Music is meant to be shared with others and it brings joy, beauty, and creativity into our world. Yearly studio recitals allow students to perform the music they have been working on and to share this experience with their friends, family, and community members.</p>
+              <p>Music is meant to be shared with others and it brings joy, beauty, and creativity into our world. Yearly studio violin recitals allow students to perform the music they have been working on and to share this experience with their friends, family, and community members.</p>
             </div>
           </div>
         </div>
@@ -119,7 +121,7 @@ Teaching Philosophy |
     <div class="container">
       <div class="headline-center headline-light">
         <h2>STILL HAVE QUESTIONS?</h2>
-        <p>Choosing the <strong>right</strong> teacher to aide you in your musical journey is important and we know how tough it can be to figure that out.<br>We'd love to hear from you and answer any questions you have!<p><br>
+        <p>Choosing the <strong>right</strong> violin teacher to aide you in your musical journey is important and we know how tough it can be to figure that out.<br>We'd love to hear from you and answer any questions you have!<p><br>
         <a href="{% url 'contact' %}" class="btn-u btn-brd btn-brd-hover btn-u-light">Contact Us</a>
       </div><!--/end Headline Center-->
     </div>
