--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Studio Policy | 
+Studio Policy | Sophia Hsiao Studio
 {% endblock %}
-
+{% block meta %}
+  <meta name="description" content="Sophia Hsiao's studio policy for violin students, parents, and her as a violin teacher.">
+{% endblock %}
 {% block content %}
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs">
@@ -20,35 +22,35 @@ Studio Policy |
 <!--=== Content Part ===-->
 <div class="container content">
   <div class="row-fluid">
-    <p class="lead"><em>The following is what I ask students and parents to commit to and what I am committed to providing the student and parent.</em></p>
+    <p class="lead"><em>The following is what I ask my students and parents to commit to as part of our violin lessons and what I am committed to providing the student and parent.</em></p>
     <h4><em>Teacher commitments</em></h4>
     <ul>
-      <li>Punctual with the lesson times and will come prepared to lessons.</li>
+      <li>Punctual with the lesson times and will come prepared to violin lessons.</li>
       <li>Use appropriate exercises and suggestions to improve technique, musicianship, and performance.</li>
       <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
       <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process</li>
       <li>Observe and adapt to the different way each student learns.</li>
-      <li>Honestly communciate with the student (and/or parent if applicable) how the student is progressing in their lessons.</li>
+      <li>Honestly communciate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
     </ul>
 
 
     <h4><em>Student commitments</em></h4>
     <ul>
-      <li>Arriving on time and coming prepared to lessons with instrument and books</li>
+      <li>Arriving on time and coming prepared to violin lessons with instrument and books</li>
       <li>Committed to regular practice at least 4-5 days a week, as it is essential to any musical growth</li>
       <li>The time required for practice depends heavily on the age and ability of the student and will therefore be discussed with the student on a case by case basis.</li>
     </ul>
 
     <h4><em>Parental commitments (if applicable)</em></h4>
     <ul>
-      <li>For students ages 4-6, parents are welcome to sit in the lesson during the first few weeks. After this time period it is recommended that the parent sit out so that your child can learn independently and start to build a relationship with the teacher.</li>
+      <li>For students ages 4-6, parents are welcome to sit in the violin lesson during the first few weeks. After this time period it is recommended that the parent sit out so that your child can learn independently and start to build a relationship with the teacher.</li>
       <li>Committed to being involved with home practice and encouraging your child to practice regularly.</li>
-      <li>Responsible for renting or purchasing an instrument for their child so that one is available for lessons and practice</li>
+      <li>Responsible for renting or purchasing an instrument for their child so that one is available for violin lessons and practice</li>
     </ul>
 
-    <h4><em>Private Lesson Policy</em></h4>
+    <h4><em>Private Violin Lesson Policy</em></h4>
     <ul>
-      <li>Private lessons are offered weekly.</li>
+      <li>Private violin lessons are offered weekly.</li>
       <li>Payment is due at the first lesson of each month.</li>
       <li>Private lessons will focus on technique, music theory, and musicianship.</li>
       <li>I will notify the student and/or parent when the student needs to purchase new music books or accessories.</li>
