--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Schedule Trial Lesson | 
+Schedule Trial Violin Lesson | Sophia Hsiao Studio
 {% endblock %}
-
+{% block meta %}
+  <meta name="description" content="Schedule a free trial violin lesson with Sophia Hsiao Studio with no risk or obligation.">
+{% endblock %}
 {% block headloaders %}
   <link rel="stylesheet" href="{% static 'sophia/plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css' %}">
   <link rel="stylesheet" href="{% static 'sophia/plugins/cube-portfolio/cubeportfolio/custom/custom-cubeportfolio.css' %}">
@@ -18,11 +20,11 @@ Schedule Trial Lesson |
 {% block content %}
 <div class="breadcrumbs-v3 img-v6 text-center">
   <div class="container">
-    <h1>Schedule Your Trial Lesson</h1>
+    <h1>Schedule Your Trial Violin Lesson</h1>
     <br>
     <ul class="breadcrumb-v2 list-inline">
       <li><a href="{% url 'home' %}"><i class="rounded-x fa fa-angle-right"></i>Home</a></li>
-      <li class="active"><i class="rounded-x fa fa-angle-right"></i>Schedule Your Trial Lesson</li>
+      <li class="active"><i class="rounded-x fa fa-angle-right"></i>Schedule Your Trial Violin Lesson</li>
     </ul>
   </div>
 </div>
@@ -39,18 +41,18 @@ Schedule Trial Lesson |
   <div class="row">
     <div class="col-md-9 mb-margin-bottom-30">
       <p>
-        Finding a violin teacher can be <strong class="color-green">hard</strong>. You want a teacher who can help you acheive your musical goals. You want a teacher that fits your personality and learning style. You want a teacher that can make learning the violin fun and not feel like a chore.
+        Finding a violin teacher can be <strong class="color-green">hard</strong>. You want a teacher who can help you acheive your musical goals. You want a teacher that fits your personality and learning style. You want a teacher that can make violin lessons fun and not feel like a chore.
         <br><br>
-        These are potentially some of the most important factors in considering the right teacher for you and it's so hard to figure it all out based on a website or a handful of reviews.
+        These are potentially some of the most important factors in considering the right violin teacher for you and it's so hard to figure it all out based on a website or a handful of reviews.
         <br><br>
-        That's why we offer a <strong class="color-green">free, thirty minute, no-commitment lesson</strong> to make it a tad easier for you gauge whether we'd be a good fit as student and teacher. If, after the lesson, you decide we're not the instructor for you, we're glad we could help you figure that out and we wish you the best of luck in your musical journey.
+        That's why we offer a <strong class="color-green">free, thirty minute, no-commitment violin lesson</strong> to make it a tad easier for you gauge whether we'd be a good fit as student and teacher. If, after the trial violin lesson, you decide we're not the instructor for you, we're glad we could help you figure that out and we wish you the best of luck in your musical journey.
         <br><br>
-        You've got nothing to lose so schedule your free lesson today!
+        You've got nothing to lose so schedule your free violin lesson today!
       </p><br>
       <div class="tag-box tag-box-v2">
-        <p>Please note that the day and time for your trial lesson will be your official lesson time should you decide to continue lessons.</p>
+        <p>Please note that the day and time for your trial violin lesson will be your official lesson time should you decide to continue lessons.</p>
       </div>
-      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL and minutes away from Mount Prospect, Elk Grove Village, and Schaumburg (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
+      <p>Violin lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL and minutes away from Mount Prospect, Elk Grove Village, and Schaumburg (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
     </div>
     <div class="col-md-3">
       <!-- Google Map -->
@@ -128,7 +130,7 @@ Schedule Trial Lesson |
         <div class="row">
           <div class="col-md-12">
             <p id="selected-lesson-info"></p>
-            <p>We just need a bit more info before we can schedule your lesson:</p>
+            <p>We just need a bit more info before we can schedule your violin lesson:</p>
             
 
             <form method="post" id="sky-form3" class="sky-form sky-changes-3">
