--- a/sophia/templates/404.html
+++ b/sophia/templates/404.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block headtitle %}
-404 Page not found | 
+404 Page not found | Sophia Hsiao Studio
 {% endblock %}
 
 {% block headloaders %}
