--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -155,7 +155,7 @@ Sophia Hsiao Studio - Private Violin Lessons in Arlington Heights
                   </div>
                   <span class="testimonials-author">
                     {{testimonial.client_name}}<br>
-                    <em>With Sophia Hsiao Studio from {{testimonial.start_date}} to {{testimonial.end_date}}</em>
+                    <em>With Sophia Hsiao Studio {% if not testimonial.end_year %}since{% else %}from{% endif %} {{testimonial.start_year}}{% if testimonial.end_year %} to {{testimonial.end_year}}{% endif %}</em>
                   </span>
                 </div>
               </div>
