Changes day field on timeslot

--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -85,7 +85,7 @@ Schedule Trial Violin Lesson | Sophia Hsiao Studio
                     <div class="pricing-table-v6">
                       <div class="service-block service-block-{{trial_lesson.color_class}}">
                         <i class="icon-custom icon-color-light rounded-x fa fa-calendar"></i>
-                        <h2 class="heading-md">{{trial_lesson.timeslot.day}}s</h2>
+                        <h2 class="heading-md">{{trial_lesson.timeslot.get_day_display}}s</h2>
                         <h2 class="heading-md">{{trial_lesson.timeslot.start_time}} to {{trial_lesson.timeslot.end_time}}</h2>
                         <hr>
                         <p>Select a date below:</p>
