Fixes scheduling with new day model and checkbox issue

--- a/sophia/templates/schedule_lesson_notification_email.html
+++ b/sophia/templates/schedule_lesson_notification_email.html
@@ -1,6 +1,6 @@
 A new student has scheduled a trial lesson. Here is their information:
 
-Date and time: {{timeslot.day}}, {{date|date:"M d, Y"}} from {{timeslot.start_time}} to {{timeslot.end_time}}
+Date and time: {{day}}, {{date|date:"M d, Y"}} from {{timeslot.start_time}} to {{timeslot.end_time}}
 Name: {{student_name}}
 Age: {{age}}
 Email: {{email}}
