Small SEO changes and open graph meta tag for image

--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -12,7 +12,7 @@ Sophia Hsiao Studio - Private Violin Lessons in Arlington Heights
 {% endblock %}
 
 {% block meta %}
-  <meta name="description" content="Sophia Hsiao Studio provides private violin lessons for children and adults using the Suzuki method in Arlington Heights.">
+  <meta name="description" content="Sophia Hsiao Studio provides private violin lessons for children and adults using the Suzuki method in Arlington Heights, Mount Prospect, Elk Grove Village, and Schaumburg. Schedule a free trial violin lesson today!">
 {% endblock %}
 
 {% block content %}
