Fixes homepage template forloop typo

--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -162,11 +162,10 @@ Sophia Hsiao Studio - Private Violin Lessons in Arlington Heights
 
             {% if forloop.counter|divisibleby:2 %}
             </div>
-            {% elif forllop.last %}
+            {% elif forloop.last %}
             </div>
             {% endif %}
           {% endfor %}
-
         </div><!--/end container-->
       </div>
         <!--=== End Section ===-->
