--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -30,7 +30,7 @@ Studio Policy | Sophia Hsiao Studio
       <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
       <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process</li>
       <li>Observe and adapt to the different way each student learns.</li>
-      <li>Honestly communciate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
+      <li>Honestly communicate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
     </ul>
 
 
